# flight-review-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  diagnostics.yml  docker.yml  release.yml
crates/converter/: Cargo.toml
crates/converter/benches/: convert.rs
crates/converter/src/: analysis.rs  converter.rs  lib.rs  metadata.rs  pid_analysis.rs  z_axis_ml.rs
crates/converter/src/diagnostics/: CONTRIBUTING.md  battery_brownout.rs  ekf_failure.rs  ekf_selector_whipsaw.rs  gps_interference.rs  mod.rs  motor_failure.rs  rc_loss.rs  testing.rs
crates/converter/src/diagnostics/snapshots/: flight_review__diagnostics__battery_brownout__tests__detects_real_battery_brownout.snap  flight_review__diagnostics__battery_brownout__tests__snapshot_sample_ulg.snap  flight_review__diagnostics__ekf_failure__tests__detects_real_ekf_failure.snap  flight_review__diagnostics__ekf_failure__tests__snapshot_sample_ulg.snap  flight_review__diagnostics__ekf_selector_whipsaw__tests__detects_real_ekf_selector_whipsaw.snap  flight_review__diagnostics__ekf_selector_whipsaw__tests__snapshot_sample_ulg.snap  flight_review__diagnostics__gps_interference__tests__detects_real_gps_interference.snap  flight_review__diagnostics__gps_interference__tests__snapshot_sample_ulg.snap  flight_review__diagnostics__motor_failure__tests__detects_real_motor_failure.snap  flight_review__diagnostics__motor_failure__tests__snapshot_sample_ulg.snap  flight_review__diagnostics__rc_loss__tests__snapshot_sample_ulg.snap
crates/converter/src/signal_processing/: dsp.rs  mod.rs  pid_step_response.rs  testing.rs
crates/converter/tests/fixtures/: battery_brownout.ulg  ekf_failure.ulg  ekf_selector_whipsaw.ulg  gps_interference.ulg
crates/server/: Cargo.toml
crates/server/src/: extract.rs  geocode.rs  lib.rs  main.rs
crates/server/src/api/: logs.rs  mod.rs  stats.rs  upload.rs
crates/server/src/db/: mod.rs  postgres.rs  sqlite.rs
crates/server/src/storage/: mod.rs
crates/server/tests/: integration.rs
docs/architecture/: diagnostics-pipeline.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/browse/: ActiveFilters.svelte  AdvancedFilters.svelte  FilterSidebar.svelte  FlightThumbnail.svelte  LogTable.svelte  PaginationControls.svelte  SearchBar.svelte
frontend/src/lib/components/browse/__tests__/: FilterSidebar.test.ts  (+1 more)
frontend/src/lib/components/shared/: Combobox.svelte  ErrorBanner.svelte  LoadingSpinner.svelte  NavBar.svelte
frontend/src/lib/components/stats/: AirframesTable.svelte  DurationHistogram.svelte  HardwareBars.svelte  KpiCards.svelte  StatsFilterPanel.svelte  VehicleTypeDonut.svelte
frontend/src/lib/components/upload/: RecentLogs.svelte  UploadDropzone.svelte  UploadForm.svelte  UploadProgress.svelte  UploadResult.svelte
frontend/src/lib/components/viewer/: DragDropPlotList.svelte  FlightModeTimeline.svelte  FlightSummaryHeader.svelte  LazyPlot.svelte  LogMessagesPanel.svelte  MapPanel.svelte  ParamDiffPanel.svelte  PerfCounterTable.svelte  PlotBuilderPanel.svelte  PlotContainer.svelte  PlotStrip.svelte  ProcessTable.svelte  SpectrogramPlot.svelte  SystemDiagnosticsPanel.svelte  TopicTreeSidebar.svelte  TrajectoryPlot.svelte
frontend/src/lib/data/: px4-versions.json
frontend/src/lib/stores/: logViewer.ts  plotSync.ts  theme.ts
frontend/src/lib/stores/__tests__/: theme.test.ts
frontend/src/lib/utils/: duckdb.ts  formatters.ts  hardwareNames.ts  modeColors.ts  paramExport.ts  plotPersistence.ts  spectrogram.ts  uplotTouchZoom.ts  viridis.ts
frontend/src/lib/utils/__tests__/: duckdb.test.ts  formatters.test.ts  hardwareNames.test.ts  modeColors.test.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/browse/: +page.svelte
frontend/src/routes/log/[id]/: +layout.svelte  +page.svelte
frontend/src/routes/stats/: +page.svelte
scripts/: download-logs.sh  staging-setup.sh
scripts/ci/: check-analyzer.sh  check-bench-budget.sh
src/: converter.rs  lib.rs  metadata.rs
(+7 files in other folders)
