[package]
name = "flight-review"
version = "0.1.0"
edition = "2021"
description = "Flight Review v2 — ULog to Parquet conversion and metadata extraction"
license = "MIT"

[dependencies]
px4-ulog = { git = "https://github.com/mrpollo/px4-ulog-rs.git", branch = "test/comprehensive-test-coverage" }
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[[bin]]
name = "ulog-convert"
path = "src/bin/ulog_convert.rs"

[dev-dependencies]
tempfile = "3"
